--- a/templates/index.html
+++ b/templates/index.html
@@ -1,67 +1,69 @@
 <!doctype html>
 <html>
+
 <head>
-  <title>GCE Instances Manager</title>
-  <meta name="google-signin-client_id" content="{{ gsignin_key }}">
+	<title>GCE Instances Manager</title>
+	<meta name="google-signin-client_id" content="{{ gsignin_key }}">
 
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
-  
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
+	<script src="{{ url_for('static', filename='script.js') }}"></script>
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="javascript:void(0)">GCE Instances Manager</a>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="javascript:void(0)">GCE Instances Manager</a>
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <div class="collapse navbar-collapse" id="navb">
-    <div class="mr-auto">
-        
-    </div>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <span class="nav-link" href="javascript:void(0)">Link</span>
-      </li>
-      <li class="nav-item">
-        <span class="nav-link" href="javascript:void(0)">Link</span>
-      </li>
-      <li class="nav-item">
-        <span class="nav-link disabled" href="javascript:void(0)">Disabled</span>
-      </li>
-    </ul>
-    <div id="gsignin_btn" class="g-signin2" data-onsuccess="onSignIn" style="display: none"></div>
-  </div>
-</nav>
+		<div class="collapse navbar-collapse" id="navb">
+			<div class="mr-auto"></div>
+			<div id="nav_user_info">
+				<div id="gsignin_btn" class="g-signin2" data-onsuccess="onSignIn"></div>
+			</div>
+		</div>
+	</nav>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script>
-    function checkLoginUser(id_token) {
-        let data = {
-            token: id_token
-        };        
-        $.post("/checktoken", data, function(res) {
-            if(res.sub) {
-                console.log(res);
-            } else {
-                console.error("not a valid user");
-            }
+    <main class="container-fluid">
+        <div class="row">
+            <div id="main-workspace" class="col-12 d-flex justify-content-center align-items-center" style="min-height: 90vh">
+                <div class="text-center">
+                    <h2>Hello!</h2>
+                    <h4>You will be able to see the information once you signin with your account.</h4>
+                    <h4>If you already signed in, wait a moment so we can check who you are..</h4>
+                </div>
+            </div>    
+        </div>    
+    </main>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script>
+	// Checks if the user logged in is valid.
+    function loadApp(id_token) {
+        $.ajax({
+            url: '/get-user-data',
+            headers: { 'x-user-token': id_token }
+        }).done(function(data) {
+            console.log(data);
         });
     }
 
+    // Callback for when the user sign in from the web and when we do the first check.
     function onSignIn(googleUser) {
         let id_token = googleUser.getAuthResponse().id_token;
-        checkLoginUser(id_token);
+        loadApp(id_token);
     }
 
+    // If user is already logged in the browser we check if it's a valid user and if it is registered in our DB
     if (auth2.isSignedIn.get()) {
         onSignIn(googleUser);
     }
-</script>
+
+	</script>
 </body>
+
 </html>
