Changed the requests to fetch the instances so they are done in a setTimeout Loop. Changed the current zones partial to be a instances partial

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,27 +50,36 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script>
 		function get_instances(id_token) {
-        $_workspace = $("#main-workspace");
-        $_workspace.html(`<div class="spinner-border spinner-border-lg"></div>`);
-        $.ajax({
+            $_workspace = $("#main-workspace");
+            $_workspace.html(`<div class="spinner-border spinner-border-lg"></div>`);
+            $.ajax({
 
-            url: '/zones',
-            headers: { 'x-user-token': id_token }
+                url: '/zones',
+                headers: { 'x-user-token': id_token }
 
-        }).done(function(data) {
-            if(data.zone_count > 0) {
-                for (zone of data.zones) {
-                    $.ajax({
-                        url: '/instances/' + zone.name,
-                        headers: { 'x-user-token': id_token }
-                    }).done(function(data) {
-                        console.log(data);
-                    });    
+            }).done(function(data) {
+                if(data.zone_count > 0) {
+                    let i = 0;
+                    for (zone of data.zones) {
+                        let zoneName = zone.name;
+                        let x = i * 1000;
+                        i++;
+                        
+                        setTimeout(function() {
+                            // Using a setTimeout to avoid blocking too many simultanious requests
+                            $.ajax({
+                                url: '/instances/' + zoneName,
+                                headers: { 'x-user-token': id_token }
+                            }).done(function(data) {
+                                console.log(data);
+                            });
+
+                        }, x);
+                    }
+                } else {
+                    $_workspace.html(`<h2 class="text-center">An error occured when trying to fetch GPC zones</h2>`);
                 }
-            } else {
-                $_workspace.html(`<h2 class="text-center">An error occured when trying to fetch GPC zones</h2>`);
-            }
-        });
+            });
     }
 
     function get_user_data(id_token) {
