--- a/templates/partials/instances.html
+++ b/templates/partials/instances.html
@@ -1,9 +1,9 @@
-<div class="col-md-4 p-2" style="display: none">
+<div class="col-md-4 p-4">
     <div class="card">
-        <div class="card-header text-uppercase">{{ instance }}</div>
+        <div class="card-header text-uppercase">{{ zone }}</div>
         <div class="card-body">
             {% for instance in instances %}
-                hola
+                {{ instance.name }}
             {% endfor %}      
         </div>
     </div>
