Changed the style of the cards and also commented the request for all the zones and replaced it by a list of dicts

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,22 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 	<style>
 		.spinner-border-lg {
 			width: 4rem;
 			height: 4rem;
 		}
+
+        .pos-rel {
+            position: relative;
+        }
+
+        .btn-action {
+            position: absolute;
+            top: 1em;
+            right: 1em;
+        }
 	</style>
 </head>
 
@@ -72,7 +83,7 @@
                                     $_workspace.prepend(data);
                                 }                            
                                 // Continue handling the queue 
-                                getInstanceByZone();                            
+                                getInstanceByZone();  
                             });
                         } else {
                             $("#workspace-spinner").fadeOut();
