--- a/templates/partials/instances.html
+++ b/templates/partials/instances.html
@@ -1,10 +1,18 @@
 <div class="col-md-4 p-4">
-    <div class="card">
-        <div class="card-header text-uppercase">{{ zone }}</div>
-        <div class="card-body">
-            {% for instance in instances %}
-                {{ instance.name }}
-            {% endfor %}      
-        </div>
-    </div>
+	<div class="card">
+		<div class="card-header text-uppercase">{{ zone }}</div>
+		<div class="card-body">
+            {% for instance in instances %} 
+                <div class="pos-rel border border-light rounded text-left p-2">
+                    <h4>{{ instance.name }}</h4>
+                    Status:  
+                    {% if instance.status == 'RUNNING' %}
+                        <span class="badge badge-success">{{ instance.status }}</span> <button class="btn btn-danger btn-sm btn-action" data-toggle="tooltip" title="Stop"><i class="fa fa-stop"></i></button>
+                    {% else %}
+                        <span class="badge badge-danger">{{ instance.status }}</span> <button class="btn btn-success btn-sm btn-action" data-toggle="tooltip" title="Start"><i class="fas fa-play"></i></button>
+                    {% endif %}
+                </div>
+            {% endfor %}
+		</div>
+	</div>
 </div>
