--- a/templates/partials/instances.html
+++ b/templates/partials/instances.html
@@ -2,17 +2,19 @@
 	<div class="card">
 		<div class="card-header text-uppercase">{{ zone }}</div>
 		<div class="card-body">
-            {% for instance in instances %} 
-                <div class="pos-rel border border-light rounded text-left p-2">
-                    <h4>{{ instance.name }}</h4>
-                    Status:  
-                    {% if instance.status == 'RUNNING' %}
-                        <span class="badge badge-success">{{ instance.status }}</span> <button class="btn btn-danger btn-sm btn-action" onclick="openModal('stop')" data-toggle="tooltip" title="Stop"><i class="fa fa-stop"></i></button>
-                    {% else %}
-                        <span class="badge badge-danger">{{ instance.status }}</span> <button class="btn btn-success btn-sm btn-action" onclick="openModal('start')" data-toggle="tooltip" title="Start"><i class="fas fa-play"></i></button>
-                    {% endif %}
-                </div>
-            {% endfor %}
+			{% for instance in instances %}
+			<div class="pos-rel border border-light rounded text-left p-2">
+				<h4>{{ instance.name }}</h4>
+				Status:
+				{% if instance.status == 'RUNNING' %}
+                    <span class="badge badge-success">{{ instance.status }}</span>
+                    <button class="btn btn-danger btn-sm btn-action" onclick="openModal(this)" data-action="stop" data-vm="{{ instance.name }}" data-toggle="tooltip" title="Stop"><i class="fa fa-stop"></i></button>
+				{% else %}
+                    <span class="badge badge-danger">{{ instance.status }}</span>
+                    <button class="btn btn-success btn-sm btn-action" onclick="openModal(this)" data-action="start" data-vm="{{ instance.name }}" data-toggle="tooltip" title="Start"><i class="fas fa-play"></i></button>
+				{% endif %}
+			</div>
+			{% endfor %}
 		</div>
 	</div>
 </div>
