--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="{{ url_for('static', filename='script.js') }}"></script>
 	<script>
-	
+
     const requestManager = {
         id_token: null,
         makeRequest(options, callback) {
@@ -80,123 +80,138 @@
             $.ajax(options).done(function(data) {
                 callback(data);
             });
+        },
+        checkOnRequest(zone, operationID, callback) {
+            let handle = setInterval(function() {
+                requestManager.makeRequest({url: `/operations/${zone}/${operationID}`}, function(data) {
+                    if(data.status === "DONE") {
+                        clearInterval(handle);
+                        callback(data);
+                    }
+                });
+            },1000);
         }
     };
 
-    function openModal(caller) {
-        $_caller = $(caller);
-        let action = $_caller.attr("data-action");
-        let targetVM = $_caller.attr("data-vm");
-        let zone = $_caller.attr("data-zone");
+    const modalController = {
+        open(caller) {
+            this["$_caller"] = $(caller);
+            if(this.$_caller.hasClass("disabled") == false) {
+                this["action"] = this.$_caller.attr("data-action");
+                this["target"] = this.$_caller.attr("data-vm");
+                this["zone"] = this.$_caller.attr("data-zone");
 
-        $("#confirm_text").html(`Are you sure you wish to ${action} <b>${targetVM}</b>?`);
-        $("#confirm_actions").html(`
-            <button class="btn btn-light btn-sm" data-dismiss="modal">
-                CANCEL
-            </button>
-            <button class="btn btn-info btn-sm font-weight-bold" data-action="${action}" 
-                data-vm="${targetVM}" data-zone="${zone}" onclick="requestAction(this)">
-                ${action.toUpperCase()}
-            </button>`);
+                $("#confirm_text").html(`Are you sure you wish to ${this.action} <b>${this.target}</b>?`);
+                $("#confirm_actions").html(`
+                    <button class="btn btn-light btn-sm" data-dismiss="modal">
+                        CANCEL
+                    </button>
+                    <button class="btn btn-info btn-sm font-weight-bold" onclick="modalController.confirm(this)">
+                        ${this.action.toUpperCase()}
+                    </button>`);
 
-        $("#confirm_modal").modal('show');
-    }
-
-    function checkOnAction(zone, operationID) {
-        let handle = setInterval(function() {
-            requestManager.makeRequest({url: `/operations/${zone}/${operationID}`}, function(data) {
-                if(data.status === "DONE") {
-                    clearInterval(handle);
-                }
-            });
-        },1000);
-    }
-
-    function requestAction(caller) {
-        let $_caller = $(caller);
-        if ($_caller.hasClass('disabled') == false) {
-            let action = $_caller.attr("data-action");
-            let targetVM = $_caller.attr("data-vm");
-            let zone = $_caller.attr("data-zone");
-
-            requestManager.makeRequest({
-                method: "POST",
-                url: `/instances/${action}`,
-                data: {
-                    instance: targetVM,
-                    zone: zone
-                }
-            }, function(data) {
-                if(data.id) {
-                    checkOnAction(zone, data.id);
-                }
-            });
-        }
-        addSpinnerToButton(caller);
-    }
-
-    function addSpinnerToButton(target) {
-        $_target = $(target);
-        $_spinner = $_target.children(".spinner-border");
-        if ($_spinner.length <= 0) {
-            $_target.append(` <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>`);
-        } else {
-            $_spinner.show();
-        }
-        $_target.addClass("disabled");
-    }
-
-    function getInstances() {
-        $_workspace = $("#main-workspace");
-        $_workspace.html(`<div id="workspace-spinner" class="spinner-border spinner-border-lg"></div>`);
-
-        requestManager.makeRequest({url: '/zones'}, function(data) {
-            if(data.zone_count > 0) {
-                function getInstanceByZone() {
-                    let zone = data.zones.pop();
-                    if(zone) {
-                        requestManager.makeRequest({url: '/instances/' + zone.name}, function(data) {
-                            // Display data
-                            if(!data.message) {
-                                $_workspace.prepend(data);
-                            }                            
-                            // Continue handling the queue 
-                            getInstanceByZone();  
-                        });
-                    } else {
-                        $("#workspace-spinner").fadeOut();
-                    }
-                }
-
-                getInstanceByZone();
-
-            } else {
-                $_workspace.html(`<h2 class="text-center">An error occured when trying to fetch GPC zones</h2>`);
+                $("#confirm_modal").modal('show');
             }
-        });
-        
-    }
+        },
 
-    function getUserData() {
-        let options = {url: '/get-user-data'};
-        requestManager.makeRequest(options, function(data) {
-            $("#nav_user_info").html(data);
-        });
-    }
+        confirm(confirmer) {
+            let zone = this.zone;
+            this["$_confirmer"] = $(confirmer);
+            if (this.$_confirmer.hasClass('disabled') == false) {
+                this.$_caller.addClass("disabled");
+                requestManager.makeRequest({
+                    method: "POST",
+                    url: `/instances/${this.action}`,
+                    data: {
+                        instance: this.target,
+                        zone: zone
+                    }
+                }, function(data) {
+                    if(data.id) {
+                        ui.removeSpinner(confirmer);
+                        $("#confirm_modal").modal('hide');
+                        requestManager.checkOnRequest(zone, data.id, app.updateInstance);
+                    }
+                });
+            }
+            ui.addSpinnerToButton(confirmer);
+        }
+    };
+    
+    const ui = {
+        addSpinnerToButton(target) {
+            $_target = $(target);
+            $_spinner = $_target.children(".spinner-border");
+            if ($_spinner.length <= 0) {
+                $_target.append(` <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>`);
+            } else {
+                $_spinner.show();
+            }
+            $_target.addClass("disabled");
+        },
 
-	// Checks if the user logged in is valid.
-    function loadApp() {
-        // Load user data
-        getUserData();
+        removeSpinner(target) {
+            $_target = $(target);
+            $_target.children(".spinner-border").hide();
+            $_target.removeClass("disabled");
+        }
+    };
 
-        // Load instances data
-        getInstances();
-    }
+    const app = {
+        load() {
+            // Load user data
+            this.getUserData();
+
+            // Load instances data
+            this.getInstances();
+        },
+
+        getUserData() {
+            let options = {url: '/get-user-data'};
+            requestManager.makeRequest(options, function(data) {
+                $("#nav_user_info").html(data);
+            });
+        },
+
+        getInstances() {
+            $_workspace = $("#main-workspace");
+            $_workspace.html(`<div id="workspace-spinner" class="spinner-border spinner-border-lg"></div>`);
+
+            requestManager.makeRequest({url: '/zones'}, function(data) {
+                if(data.zone_count > 0) {
+                    function getInstanceByZone() {
+                        let zone = data.zones.pop();
+                        if(zone) {
+                            requestManager.makeRequest({url: '/instances/' + zone.name}, function(data) {
+                                // Display data
+                                if(!data.message) {
+                                    $_workspace.prepend(data);
+                                }                            
+                                // Continue handling the queue 
+                                getInstanceByZone();  
+                            });
+                        } else {
+                            $("#workspace-spinner").fadeOut();
+                        }
+                    }
+
+                    getInstanceByZone();
+
+                } else {
+                    $_workspace.html(`<h2 class="text-center">An error occured when trying to fetch GPC zones</h2>`);
+                }
+            });
+        },
+        // Updates UI information after tracking progress of a operation
+        updateInstance(data) {
+            console.log(data);
+        }
+    };
 
     // Callback for when the user sign in from the web and when we do the first check.
     function onSignIn(googleUser) {
         requestManager.id_token = googleUser.getAuthResponse().id_token;
-        loadApp();
+        app.load();
     }
 
     // Sign out function from The Google Signin API
@@ -214,7 +229,6 @@
     if (auth2.isSignedIn.get()) {
         onSignIn(googleUser);
     }
-
 	</script>
 </body>
 
