--- a/templates/partials/instances.html
+++ b/templates/partials/instances.html
@@ -3,19 +3,7 @@
 		<div class="card-header text-uppercase">{{ zone }}</div>
 		<div class="card-body">
 			{% for instance in instances %}
-			<div class="pos-rel border border-light rounded text-left p-2">
-				<h4>{{ instance.name }}</h4>
-				Status:
-				{% if instance.status == 'RUNNING' %}
-                    <span class="badge badge-success">{{ instance.status }}</span>
-                    <button class="btn btn-danger btn-sm btn-action" onclick="modalController.open(this)" data-action="stop"
-                            data-vm="{{ instance.name }}" data-toggle="tooltip" data-zone="{{ zone }}" title="Stop"><i class="fa fa-stop"></i></button>
-				{% else %}
-                    <span class="badge badge-danger">{{ instance.status }}</span>
-                    <button class="btn btn-success btn-sm btn-action" onclick="modalController.open(this)" data-action="start" 
-                            data-vm="{{ instance.name }}" data-toggle="tooltip" data-zone="{{ zone }}" title="Start"><i class="fas fa-play"></i></button>
-				{% endif %}
-			</div>
+                {% include 'partials/instance.html' %}
 			{% endfor %}
 		</div>
 	</div>
